--- a/about/index.html
+++ b/about/index.html
@@ -12,6 +12,7 @@
   <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Slabo+27px' rel='stylesheet' type='text/css'>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="The european banking union is a project under construction. The ultimate goal of this website is to gather and structure banking union-related documents, from legislative acts to research papers, while fostering the debate on those issues that are unfinished." content="Eurozone banking union, interviews with academics, researchers and professionals, european banking ">
   <link rel="stylesheet" type="text/css" href="index.css">
   <link rel="stylesheet" media="screen and (max-width: 415px)" href="indexsmall.css">
 </head>
@@ -19,13 +20,13 @@
 <body>
   <nav class="stroke">
     <ul1>
-      <h1><a href ="/bankingunion_eu/">bankingunion_eu</a></h1>
+      <h1><a href ="/">bankingunion_eu</a></h1>
     </ul1>
     <ul2><a href="https://twitter.com/bankingunion_eu" target="_blank"><img src="http://s28.postimg.org/szodgolrd/Untitled.png" alt="HTML tutorial" style="width:80px;height:60px;"></a></ul2>
     <ul3>
-      <li><a href="/bankingunion_eu/">index<sub>1</sub></a></li>
-      <li><a href="/bankingunion_eu/previous">previous<sub>2</sub></a></li>
-      <li><a href="/bankingunion_eu/about">about<sub>3</sub></a></li>
+      <li><a href="/">index<sub>1</sub></a></li>
+      <li><a href="/previous">previous<sub>2</sub></a></li>
+      <li><a href="/about">about<sub>3</sub></a></li>
     </ul3>
   </nav>
   
@@ -48,8 +49,8 @@
 
 <div class="foot">
     <div class="down">beta version</div>
-    <div class="down"><a href="https://twitter.com/bankingunion_eu">twitter</a></div>
-    <div class="down"><a href="/bankingunion_eu/about">about</a></li></div>
+    <div class="down"><a href="https://twitter.com/bankingunion_eu" target="_blank">twitter</a></div>
+    <div class="down"><a href="/about">about</a></li></div>
 </div>
 
 
